--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./sheegull_favicon.png" />
+    <link rel="icon" type="image/png" href="./sheegull_favicon.png" sizes="16x16" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Chatbot</title>
   </head>
